--- a/Algebra/Linear Algebra/Linear Algebra.tex
+++ b/Algebra/Linear Algebra/Linear Algebra.tex
@@ -37,32 +37,30 @@ The rest of the chapters will focus on particular properties of vector spaces an
 \end{itemize}
 \end{defn}
 
-\begin{prp}{}{} Let $a\in\mathbb{F}$ and $u\in V$ be a vector space over $\mathbb{F}$. 
+\begin{eg}{}{} Let $n\in\N^+$. Let $\F$ be a field. Then the following are true. 
 \begin{itemize}
-\item $a\cdot \vb{0}_V=\vb{0}_V$
-\item $0\cdot \vb{u}=\vb{0}_V$
-\item $(-a)\vb{v}=-(a\vb{v})=a(-\vb{v})$
-\item $a\vb{v}=\vb{0}_V\implies a=0$ or $\vb{v}=\vb{0}_V$
+\item $\F^n$ is a vector space over $\F$. 
+\item $\F[x]$ is a vector space over $\F$. 
 \end{itemize}
-\begin{proof} ~\\
-\begin{itemize}
-\item $a(\vb{0}_V)=a(\vb{0}_V+\vb{0}_V)=a\vb{0}_V+a\vb{0}_V$. Adding the additive inverse of $a\vb{0}_V$ on both sides gives our result. 
-\item $0\vb{u}=(0+0)\vb{u}=0\vb{u}+0\vb{u}$. Adding the additive inverse of $0\vb{u}$ on both sides gives our result. 
-\item Naturally $-(a\vb{v})$ is the inverse of $a\vb{v}$. Consider $a\vb{v}+a(-\vb{v})$. $a\vb{v}+a(-\vb{v})=a(\vb{v}-\vb{v})=a\vb{0}_V=0_V$. Thus $a(-\vb{v})$ is also the inverse of $a\vb{v}$ and $-(a\vb{v})=a(-\vb{v})$. The same could be done to the third item with the other distributive law. 
-\item Suppose that $a\neq0$. Then $\vb{v}=(a^{-1}a)\vb{v}=a^{-1}(a\vb{v})=0$. 
-\end{itemize}
-\end{proof}
-\end{prp}
+\end{eg}
 
-\begin{prp}{}{} The additive identity, multiplicative identity, additive inverse of a vector space is unique. 
-\begin{proof} Suppose that $\vb{e}$ and $\vb{f}$ are additive identities. Then $\vb{e}+\vb{f}=\vb{e}$ and $\vb{e}+\vb{f}=\vb{f}$. Thus $\vb{e}=\vb{f}$. Suppose that $\vb{e}$ and $\vb{f}$ are multiplicative identities. Then $\vb{e}\vb{f}=\vb{e}$ and $\vb{e}\vb{f}=\vb{f}$ and $\vb{e}=\vb{f}$. Let $a\in V$. Suppose that $b,c\in V$ are additive inverses of $a$. Then 
-\begin{align*}
-a+b=a+c&\implies b+a+b=b+a+c\\
-&\implies(b+a)+b=(b+a)+c\\
-&\implies b=c
-\end{align*}
+\begin{lmm}{}{} Let $\F$ be a field. Let $V$ be a vector space over $\F$. Let $v\in V$. Let $\lambda\in\F$. Then the following are true. 
+\begin{itemize}
+\item $\lambda\cdot 0=0$. 
+\item $0\cdot v=0$. 
+\item $(-\lambda)\cdot v=-(\lambda\cdot v)=\lambda\cdot(-v)$. 
+\item If $\lambda\cdot v=0$ then $\lambda=0$ or $v=0$. 
+\end{itemize}
+\begin{proof}\\
+We have that $\lambda\cdot 0=\lambda\cdot(v-v)=\lambda\cdot v-\lambda\cdot v=0$. \\
+
+We have that $(\lambda-\lambda)\cdot v=\lambda\cdot v-\lambda\cdot v=0$. \\
+
+We have that $(-\lambda)\cdot v=((-1)\lambda)\cdot v=(-1)\cdot(\lambda\cdot v)$ and $(-1)\lambda\cdot v=(\lambda(-1))\cdot v=\lambda\cdot(-v)$. \\
+
+If $\lambda\neq 0$, then $v=1\cdot v=\frac{1}{\lambda}\cdot(\lambda\cdot v)=\frac{1}{\lambda}\cdot 0=0$. 
 \end{proof}
-\end{prp}
+\end{lmm}
 
 \subsection{Basis and Dimension}
 \begin{defn}{Linearly Independent Vectors}{}\\
@@ -200,6 +198,14 @@ We can now define the rank of a matrix without problem.
 \item $T(kv)=kT(v)$ for all $k\in\mathbb{F}$, $v\in V$
 \end{itemize}
 \end{defn}
+
+\begin{eg}{}{}\\
+Define the linear map $T:\R^2\to\R^2$ by $T(x,y)=(2x-y,3x+2y)$. Then $T$ is a linear map. 
+\end{eg}
+
+\begin{eg}{}{}\\
+Define the linear map $T:\R[x]\to\R[x]$ by $T(p(x))=p'(x+1)$. Then $T$ is a linear map. 
+\end{eg}
 
 \begin{lmm}{}{} Let $V,W$ be vector spaces over a field $\F$. Let $T:V\to W$ be a linear map. Then the following are true. 
 \begin{itemize}
