--- a/Algebra/Rings and Modules/Rings and Modules.tex
+++ b/Algebra/Rings and Modules/Rings and Modules.tex
@@ -1405,6 +1405,40 @@ We now know that $\frac{(J(R))^{k-1}R}{(J(R))^kR}$ and $(J(R))^kR$ are Noetheria
 \end{thm}
 
 \pagebreak
+\section{Structure Theorem for Finitely Generated Modules over PIDs}
+\subsection{Torsion of a Module}
+\begin{defn}{Torsion}{}\\
+Let $R$ be an integral domain. Let $M$ be an $R$-module. Define the torsion of $M$ to be $$\text{Tor}_R(M)=\{x\in M\;|\;rx=0\text{ for some }r\in R\}$$
+\end{defn}
+
+\begin{defn}{Torsion Free Modules}{}\\
+Let $R$ be an integral domain. Let $M$ be an $R$-module. We say that $R$ is torsion free if $\text{Tor}_R(M)=0$. 
+\end{defn}
+
+\subsection{The Main Theorem}
+\begin{thm}{Invariant Factor Decomposition (Existence)}{}\\
+Let $R$ be a PID. Let $M$ be a finitely generated $R$-module. Then there is an $R$-module isomorphism $$M\cong R^f\oplus\bigoplus_{i=1}^n\frac{R}{(a_i)}$$ where $f\in\N$, $a_1,\dots,a_n\in R$ are non-units and $a_i\;|\;a_{i+1}$ for $1\leq i\leq n-1$. Moreover, there is an isomorphism $$\text{Tor}(M)\cong\bigoplus_{i=1}^n\frac{R}{(a_i)}$$
+\end{thm}
+
+\begin{crl}{}{}\\
+Let $R$ be a PID. Let $M$ be a finitely generated $R$-module. Then $M$ is torsion free if and only if $M$ is free. 
+\end{crl}
+
+\begin{thm}{Invariant Factor Decomposition (Uniqueness)}{}\\
+Let $R$ be a PID. Let $M,N$ be a finitely generated $R$-modules with invariant factor decomposition given by $$M\cong R^f\oplus\bigoplus_{i=1}^n\frac{R}{(a_i)}\;\;\;\;\text{ and }\;\;\;\;N\cong R^e\oplus\bigoplus_{i=1}^m\frac{R}{(b_i)}$$ Then there is an $R$-module isomorphism $M\cong N$ if and only if $f=e$, $n=m$ and $a_i=b_i$ for $1\leq i\leq n=m$. 
+\end{thm}
+
+\begin{thm}{Primary Decomposition (Existence)}{}\\
+Let $R$ be a PID. Let $M$ be a finitely generated $R$-module. Then there is an $R$-module isomorphism $$M\cong R^f\oplus\bigoplus_{i=1}^n\frac{R}{(p_i^{b_i})}$$ where $f\in\N$ and $p_1,\dots,p_n$ are primes in $R$. 
+\end{thm}
+
+\begin{thm}{Primary Decomposition (Uniqueness)}{}\\
+Let $R$ be a PID. Let $M,N$ be a finitely generated $R$-modules with primary decomposition given by $$M\cong R^f\oplus\bigoplus_{i=1}^n\frac{R}{(p_i^{a_i})}\;\;\;\;\text{ and }\;\;\;\;N\cong R^e\oplus\bigoplus_{i=1}^m\frac{R}{(q_i^{b_i})}$$ Then there is an $R$-module isomorphism $M\cong N$ if and only if $f=e$, $n=m$ and $\{p_1,\dots,p_n\}=\{q_1,\dots,q_m\}$. 
+\end{thm}
+
+\subsection{The Rational Canonical Form}
+
+\pagebreak
 \section{Graded Structures}
 \subsection{Graded Rings}
 \begin{defn}{Graded Rings}{} Let $R$ be a ring. We say that $R$ is graded if the following are true. 
