--- a/Analysis/Elementary Real Analysis/Elementary Real Analysis.tex
+++ b/Analysis/Elementary Real Analysis/Elementary Real Analysis.tex
@@ -198,19 +198,26 @@ Sequences have not only proven themselves to be useful in real analysis, but als
 
 \subsection{Sequences and Convergences}
 We begin our discussion we the definition and the first properties of sequences, as well as convergence. 
-\begin{defn}{Sequences}{}\\ A sequence in $\R$ is a function $f:\N\to\R$ that assigns to each natural number a real number. We write often write $f(n)=a_n$ and say that it is the $n$th term of the sequence. We use $(a_n)_{n\in\N}$ to represent a sequence indexed by $n$. 
+\begin{defn}{Sequences}{}\\
+A sequence in $\R$ is a function $f:\N\to\R$ that assigns to each natural number a real number. We write often write $f(n)=a_n$ and say that it is the $n$th term of the sequence. We use $(a_n)_{n\in\N}$ to represent a sequence indexed by $n$. 
 \end{defn}
 
 Real analysis is all about closeness of things. The definition of convergence below will be one such. It is important here to not only understand the geometric meaning of convergence, which is closeness towards the limit, but to also be able to apply the definition to prove convergence. While we will see later that there are more ways to prove convergences, when all else fails, we must return to this definition and therefore we should be well trained with its definition. 
 
-\begin{defn}{Covergence of Sequences}{}\\ A sequence $(a_n)_{n\in\N}$ tends to $a$ if and only if for every $\varepsilon>0$ there exists $N\in\N$ such that $$n>N\implies \abs{a_n-a}<\varepsilon$$
-We write $a_n\to a$ in this case. 
+\begin{defn}{Covergence of Sequences}{}\\
+Let $(a_n)_{n\in\N}$ be a sequence in $\R$. Let $a\in\R$. We say that the sequence converges to $a$ if for all $\varepsilon>0$, there exists $N\in\N$ such that $$n>N\implies \abs{a_n-a}<\varepsilon$$ In this case we write $(a_n)_{n\in\N}\to a$. 
 \end{defn}
 
-While generally not true in other spaces, one neat property of the real numbers is that we know that if it converges, it will only converge to exactly one number. While we will barely use this theorem anywhere, it is important to know that this is true and the reasoning behind it. This will be very first theorem involving the notion of convergence and therefore it is helpful for us to truely understand what convergence means. 
+\begin{eg}{}{} The sequence $(1/n)_{n\in\N}$ converges to $0$. 
+\begin{proof}
+Let $\varepsilon>0$. Choose $N>\frac{1}{\varepsilon}$. This is possible by the Archimedean property. For $n>N$, we have $$\frac{1}{n}<\frac{1}{N}<\varepsilon$$
+\end{proof}
+\end{eg}
 
-\begin{prp}{Uniqueness of Limits}{}\\ A sequence in $\R$ cannot converge to more than one limit. 
-\begin{proof}\\ Suppose that $a_n\to a$ and $a_n\to b$. Choose $\varepsilon$ to be $\frac{\abs{a-b}}{10}$. Then there exists $N_1$ and $N_2$ such that $\abs{a_n-a}\varepsilon$ for all $n>N_1$ and $\abs{a_n-b}<\varepsilon$ for all $n>N_2$ respectively. When $n>\max{(N_1,N_2)}$ we have both inequalies hold together. Then 
+\begin{prp}{Uniqueness of Limits}{}\\
+Let $(a_n)_{n\in\N}$ be a sequence in $\R$. Let $a,b\in\R$. Suppose that $(a_n)_{n\in\N}$ converges to $a$ and $b$. Then $a=b$. 
+\begin{proof}\\
+Choose $\varepsilon$ to be $\frac{\abs{a-b}}{10}$. Then there exists $N_1$ and $N_2$ such that $\abs{a_n-a}\varepsilon$ for all $n>N_1$ and $\abs{a_n-b}<\varepsilon$ for all $n>N_2$ respectively. When $n>\max{(N_1,N_2)}$ we have both inequalies hold together. Then 
 \begin{align*}
 \abs{a-b}&\leq\abs{a_n-a}+\abs{a_n-b}\\
 &\leq \frac{\abs{a-b}}{10}+\frac{\abs{a-b}}{10}\\
