--- a/Geometry and Topology/Algebraic Geometry 1/Algebraic Geometry 1.tex
+++ b/Geometry and Topology/Algebraic Geometry 1/Algebraic Geometry 1.tex
@@ -1313,10 +1313,10 @@ Now suppose for a contradiction that $V$ is affine. By prp10.1.9, $\mO_VV\cong\C
 \end{proof}
 \end{eg}
 
-\begin{prp}{}{} Let $k$ be an algebraically closed field. Let $V$ be a projective variety, then there is a $k$-algebra isomorphism $$\Hom_{\bold{Var}_k}(V,\A_k^1)=\mO_V(V)\cong k$$
+\begin{prp}{}{} Let $V$ be an affine variety over $\C$. Let $f\in\C[V]$. Then there is an isomorphism $$\mO_V(D(f))\cong\C[V]_f$$
 \end{prp}
 
-\begin{prp}{}{} Let $V$ be a quasi-projective variety over $\C$. Let $f\in\C[V]$. Then there is an isomorphism $$\mO_V(D(f))\cong\C[V]_f$$
+\begin{prp}{}{} Let $k$ be an algebraically closed field. Let $V$ be a projective variety, then there is a $k$-algebra isomorphism $$\Hom_{\bold{Var}_k}(V,\A_k^1)=\mO_V(V)\cong k$$
 \end{prp}
 
 \subsection{Locally Regular Functions}
