--- a/Sets and Numbers/Set Theory/Set Theory.tex
+++ b/Sets and Numbers/Set Theory/Set Theory.tex
@@ -28,106 +28,204 @@ Famous mathematicians who contributed to this area in mathematics include Ernst 
 \end{abstract}
 \pagebreak
 \tableofcontents
-\pagebreak
 
 \pagebreak
-\section{Introduction to Mathematical Logic}
-\subsection{Propositional Logic}
-
-\subsection{First Order Logic}
-
-\pagebreak
-\section{The Language of Set Theory}
-\subsection{Introduction}
-Sets are widely used in a variety of topics in Mathematics. It shows up naturally whenever we are trying to "group up" a bunch of related stuff. Examples would be perhaps the set of all natural numbers, the set of all functions with a fixed point $1$, or even the set of all matrices such that its determinant, if defined, is $1$. \\
-
-However, the concept of sets was only introduced in the 1900's. This was because long ago, there was simply no need for rigorous mathematics. There was no need to "prove" a theorem vigorously with logic and axioms until Gödel came along and seek to unify separate branches of mathematics. Nowadays, set theory has become a universal language that every Mathematician knows by heart. \\
-
-We start with the concept of belonging. There is no good definition of a set except by allowing elements to belong to a set. This is how we shall characterize sets, as well as identify sets. 
-\begin{defn}{The Concept of Belonging}{} If x belongs to a set A we write $x\in A$. 
+\section{Basic Logic}
+\subsection{Logical Symbols}
+\begin{defn}{Quantifiers}{}\\
+The following symbols are called quantifiers. 
+\begin{itemize}
+\item ``$\forall$'' is the quantifier interpreted as ``for all''. 
+\item ``$\exists$'' is the quantifier interpreted as ``there exists''. 
+\end{itemize}
 \end{defn}
 
-So we have the concept of belonging. However, we don't even know if sets even exists in our world! This is how obnoxious mathematicians are. If not given a proof, they would not rest on the notion that a set could even exists. Unfortunately, there is no real tool for us to even prove that a set, any set exists at all. \\
+\begin{defn}{Equality Symbol}{}
+\end{defn}
 
-Axiomatic set theory sort of solves this problem by stating some universally agreed assumptions. These are statements that cannot be proved and is a compromise for all mathematicians that they will work on theorems and definitions under these assumptions. \\
+\subsection{Logical Connectives}
+\begin{defn}{Arguments}{}\\
+An argument consists of a premise and a conclusion. (Our conclusions are binary and outputs only either ``True'' (T) or ``False'' (F). )
+\end{defn}
 
-Currently, the only way we can construct sets are by simply listing elements that belong to that set. For example, if I say that $1,2,3$ belongs to the set $S$ and nothing more, then we can write $S$ as $$S=\{1,2,3\}$$ We use the open and close brackets at the beginning and the end to indicate the start and the end of the contents of the set. 
+\begin{defn}{Logical Connectives}{}\\
+A logical connective takes inputs as arguments and outputs an argument. 
+\end{defn}
 
-\subsection{Axiom of Extensionality}
+\begin{defn}{Negation}{}\\
+The negation symbol ``$\neg$'' is the quantifier interpreted as ``not''. It is a logical connective on one logical value. The truth table is given by 
+\begin{center}
+\begin{tabular}{c|c}
+$P$ & $\neg P$ \\ \hline
+$F$ & T        \\
+T   & F       
+\end{tabular}
+\end{center}
+for an argument $P$. 
+\end{defn}
+
+\begin{defn}{Disjunction}{}\\
+The disjunction symbol ``$\vee$'' is the quantifier interpreted as ``or''. It is a logical connective on two logical values. The truth table is given by 
+\begin{center}
+\begin{tabular}{c|c|c}
+$P$ & $Q$ & $P\vee Q$ \\ \hline
+F   & F   & F        \\
+F   & T   & T        \\
+T   & F   & T        \\
+T   & T   & T       
+\end{tabular}
+\end{center}
+for two arguments $P$ and $Q$. 
+\end{defn}
+
+\begin{defn}{Conjunction}{}\\
+The conjunction symbol ``$\wedge$'' is the quantifier interpreted as ``and''. It is a logical connective on two logical values. The truth table is given by 
+\begin{center}
+\begin{tabular}{c|c|c}
+$P$ & $Q$ & $P\wedge Q$ \\ \hline
+F   & F   & F        \\
+F   & T   & F        \\
+T   & F   & F        \\
+T   & T   & T       
+\end{tabular}
+\end{center}
+for two arguments $P$ and $Q$. 
+\end{defn}
+
+\begin{defn}{Conditional}{}\\
+The conditional symbol ``$\to$'' is the quantifier interpreted as ``implies''. It is a logical connective on two logical values. The truth table is given by 
+\begin{center}
+\begin{tabular}{c|c|c}
+$P$ & $Q$ & $P\to Q$ \\ \hline
+F   & F   & T        \\
+F   & T   & T        \\
+T   & F   & F        \\
+T   & T   & T       
+\end{tabular}
+\end{center}
+for two arguments $P$ and $Q$. 
+\end{defn}
+
+\begin{defn}{Biconditional}{}\\
+The biconditional symbol ``$\iff$'' is the quantifier interpreted as ``if and only if''. It is a logical connective on two logical values. The truth table is given by 
+\begin{center}
+\begin{tabular}{c|c|c}
+$P$ & $Q$ & $P\iff Q$ \\ \hline
+F   & F   & T        \\
+F   & T   & F        \\
+T   & F   & F        \\
+T   & T   & T       
+\end{tabular}
+\end{center}
+for two arguments $P$ and $Q$. 
+\end{defn}
+
+\pagebreak
+\section{Introduction to Sets}
+\subsection{Logical Symbols for Sets}
+For the purposes of set theory as a language for describing mathematical objects, it is sufficient to only learn about Naive Set Theory, in which one cares less about the foundations of set theory axiomatically. Under this assumption, we take the definition of a set to be a list of objects. Formally speaking, we have the following. 
+
+\begin{defn}{The Language of Set Theory}{}\\
+The language of set theory is a first order logic that includes the following. 
+\begin{itemize}
+\item An equality symbol. 
+\item A non-logical symbol ``$\in$'' interpreted as ``membership''. 
+\end{itemize}
+We call its variables ``sets''. 
+\end{defn}
+
+The intuitive meaning of a set comes from the concept of belonging. In such a formal definition, all variables are sets. To distinguish the conceptual difference of sets and members of a set, we make use of the word variable to emphasize the role of the variable as a membership of a certain set, rather than being a set itself. 
+
+\begin{defn}{The Not Membership Symbol}{}\\
+Define the non-logical symbol ``$\notin$'' by $x\notin A$ if and only if $\neg (x\in A)$. 
+\end{defn}
+
+\subsection{Constructing a Set}
+\begin{axm}{The Axiom of Specification}{}\\
+Let $A$ be a set. Let $\varphi$ be a formula. Then there exists a set $B$ such that $x\in B$ if and only if $x\in A$ and $\varphi(x)$. In first order logic symbols, we have $$\forall A\exists B\forall x(x\in B\leftrightarrow(x\in A\wedge\varphi(x)))$$
+\end{axm}
+
+\begin{defn}{Set Builder Notation}{} Let $A$ be a set. Let $\varphi$ be a formula. Define the unique set in which a variable $x\in B$ if and only if $x\in A$ and $\varphi(x)$ to be $$\{x\in A\;|\;\varphi(x)\}$$
+\end{defn}
+
+\begin{prp}{}{}\\
+There exists a unique set $\emptyset$ such that for all variables $x$, $x\notin\emptyset$. 
+\end{prp}
+
+\begin{defn}{The Empty Set}{}\\
+Define the empty set $\emptyset$ to be the unique set such that $x\notin\emptyset$ for all sets $x$. 
+\end{defn}
+
+\begin{axm}{The Axiom of Replacement}{}
+\end{axm}
+
+\subsection{Subsets and Equality}
 Whenever presented an axiom, the reader should be prompt automatically to think about the reason for introducing this axiom. Could it be formulated in another way? Could it not be an axiom? 
 
-\begin{axm}{Axiom of Extensionality}{} Two sets $A,B$ are equal if and only if they have the same elements. We write $A=B$ in this case. 
+\begin{axm}{The Axiom of Extensionality}{}\\
+Let $A,B$ be sets. Then $A$ and $B$ are equal if for any variable $x$, $x\in A$ if and only if $x\in B$. In first order logic symbols, we have $$\forall A\forall B(A=B\leftrightarrow\forall t(t\in A\leftrightarrow t\in B))$$ In this case, we write $A=B$. 
 \end{axm}
 
-Later as we shall see, sets can be constructed using predicates or statements. The axiom of extensionality allows to different predicates to result in the same set, provided that they have the same elements. Moreover, the number of copies of the same element does not matter, as long as there is at least one. Therefore, we can shorten long sets as follows: $$\{1,2,3,1,2,3\}=\{1,2,3\}$$ Finally, order in set also does not matter because once again, the requirement that two sets are equal are simply that they share the same elements. Therefore $\{\text{Tom}, \text{Mary}\}$ and $\{\text{Mary}, \text{Tom}\}$ are also equal. \\
-
-We then give the definition of subsets. 
-
-\begin{defn}{Subsets}{} Let A, B be sets. A is a subset of B means that every elements in A is contained in B. We denote it by $$A\subseteq B$$ if $A$ is possibly equal to $B$ and $$A\subset B$$ if it is a proper subset, meaning $A$ cannot be $B$. 
+\begin{defn}{Subsets}{}\\
+Let $A,B$ be sets. 
+\begin{itemize}
+\item We say that $A\subseteq B$ if $x\in A\implies x\in B$. 
+\item We say that $A\subset B$ if $x\in A\implies x\in B$ and $\exists b\in B,b\notin A$. 
+\end{itemize}
 \end{defn}
 
-We then give a crucial theorem that we will use throughout the entirety of the book. 
+\begin{prp}{}{}\\
+Let $A,B$ be sets. Then we have $$A=B\iff A\subseteq B\;\;\text{ and }\;\; B\subseteq A$$
+\end{prp}
 
-\begin{thm}{}{} Let $A,B$ be sets. Then $$A=B\iff A\subseteq B\text{ and }B\subseteq A$$
-\begin{proof} Suppose that $A=B$. Then $x\in A\implies x\in B$ and $x\in B\implies x\in A$. Suppose that $A\subset B$ and $B\subset A$. Then $x\in A\implies x\in B$ and $x\in B\implies x\in A$. 
-\end{proof}
-\end{thm}
-
-This theorem is particularly useful in proving sets are equal. Often we will use this theorem in its reverse direction. It is a characterization of equal sets. Whenever we are given to prove two sets are equal, the reader should immediately be able to refer to this theorem. \\
-Readers who are already equipped with further concepts such as relations will realize that $\subseteq$ is a relation on sets. In fact, it is reflexive and transitive, as seen in the following theorem. 
-\begin{thm}{}{} Let, A, B, C be sets. 
+\begin{lmm}{}{}\\
+Let $A,B,C$ be sets. Then the following are true. 
 \begin{itemize}
-\item $A\subseteq A$
-\item $A\subseteq B$ and $B\subseteq C\implies A\subseteq C$
+\item $\emptyset\subseteq A$. 
+\item $A\subseteq A$. 
+\item $A\subseteq B$ and $B\subseteq C$ implies $A\subseteq C$. 
 \end{itemize}
-\begin{proof}~\\
-\begin{itemize}
-\item $x\in A\implies x\in A$
-\item $x\in A\implies x\in B\implies x\in C$
-\end{itemize}
-\end{proof}
-\end{thm}
+\end{lmm}
+\subsection{Paradoxes and its Resolution}
+The Axiom of regularity, similar to the axiom schema of specification in the next chapter is meant to prevent paradoxes rather than construct new sets. 
 
-\subsection{Axiom Schema of Specification}
-Undoubtedly one of the weirdest axioms to get a hold off is the axiom of specification. Essentially, the axiom means that we cannot create sets that are too big. Readers are free to look up more related information on this axiom, especially with regards to Russell's Paradox. 
-
-\begin{axm}{Axiom Schema of Specification}{} To every set A and every condition set S(x) there corresponds a set B whose elements are exactly those elements of x of A for which S(x) holds. We write $B=\{x\in A\;|\;S(x)\}$
+\begin{axm}{The Axiom of Regularity}{} Every non-empty set $X$ contains an element $y\in X$ such that $X$ and $y$ are disjoint sets. 
 \end{axm}
 
-This axiom basically prevents us from creating arbitrarily large sets from thin air. Try and compare the statements $\{x\in A\;|\;S(x)\}$ and $\{x\;|\;S(x)\}$. For the first one we are essentially pulling things out from a set $A$, so inherently the new set is "smaller" than $A$, while the latter we are basically pulling things out of thin air. Here we assumed that there is some universal set that contains every single thing in the universe. And the latter statement is basically a condition towards this universal set. This universal set creates a lot of problems for us. By introducing the Axiom Schema of Specification, it allows us to route our way around Russell's Paradox:\\
-
-If we define $$R=\{x\;|\;x\notin x\}$$ which means $R$ is the set of all elements that does not contain itself, then we reach a contradiction. Notably, $$R\in R\iff R\notin R$$ We prove this as usual, assuming one side then reaching the other. \\
-Assume that $R\in R$. Then since $R$ contains itself, by definition of $R$, $R$ should only contains elements that does not contain itself thus $R\notin R$. Now assume that $R\notin R$, then by definition of $R$, $R\in R$. \\
-The reason that the Axiom Schema of Specification avoids this problem is that the predicate (condition) that we specify must be applied on a set (that is not the universal set). In other words, the underlying set for the predicate cannot be too vague since the new set created from the axiom of specification is necessarily a subset of the underlying set. \\
-With this axiom in place, we can finally investigate our first concrete set!
-
-\begin{defn}{Empty Set}{} Let $A$ be a set. The set which contains no elements is the empty set, denoted by $$\emptyset=\{x\in A:x\neq x\}$$
-\end{defn}
-
-The axiom of extensionality guarantees that this empty set is unique. Although we do not have an all-encompassing universal set (the larger set possible), we still have the smallest set possible, characterized by the following theorem. 
-
-\begin{thm}{}{} $\emptyset\subseteq A$ for every set $A$. 
-\begin{proof} Every element in $\emptyset$ is also in $A$. 
-\end{proof}
-\end{thm}
-
-Its quite hard to wrap your head around this proof. Using the definition of a subset, we want to show that $x\in\emptyset$ implies $x\in A$. Do you think this is true for all $x\in\emptyset$? Well since there are no elements in the emptyset, this would be true! Can you see why?
+With this axiom, expressions such as $S\in S$ does not make sense anymore. Which is good, because it prevents self referencing as a potential paradox. 
 
 \pagebreak
-
 \section{Operations on Sets}
-\subsection{Axiom of Unions}
-\begin{axm}{Axiom of Unions}{} For every collection of sets $A$ there exists a set that contains all the elements that belong to at least one set of the given collection. In other words, there exists a set $B$ such that $$B=\{x\in a\;|\;a\in A\}$$
+\subsection{Ordered Pairs}
+\begin{axm}{The Axiom of Pairing}{}\\
+For any variables $a,b$, there exists a set $C$ such that for any variable $x$, $x\in C$ if and only if $x=a$ or $x=b$. In first order logic, we have $$\forall a\forall b\exists C\forall x(x\in C\leftrightarrow(x=a\vee x=b))$$ In this case we denote $C$ by $\{a,b\}$. 
 \end{axm}
 
-One must wonder: why go the long away round and say that a unions are elements of a set living in a set of sets? Essentially this allows us to proceed with the Axiom of Pairing. The axiom of pairing allows new sets to be created from old sets. And in fact, the Axiom of Unions is simply recovering the elements hidden from the sets given by the axiom of pairing. 
+\begin{defn}{Ordered Pairs}{}\\
+Let $a,b$ be variables. Define $(a,b)=\{a,\{a,b\}\}$. 
+\end{defn}
 
-\begin{defn}{Union}{} Let $A,B$ be sets. Define the union of $A$ and $B$ to be $$A\cup B=\{x:x\in A\text{ or }x\in B\}$$
+\begin{prp}{}{} Let $(a,b)$ and $(c,d)$ be ordered pairs. Then $(a,b)=(c,d)$ if and only if $a=c$ and $b=d$. 
+\begin{proof} Suppose that $(a,b)=(c,d)$. Then we have by definition, $$\{\{a\},\{a,b\}\}=\{\{c\},\{c,d\}\}$$ There are two cases: $a=b$ and $a\neq b$. Suppose that $a=b$, then $\{\{a\}\}=\{\{c\},\{c,d\}\}$. This forces $\{a\}=\{c\}=\{c,d\}$ and $a=c=d$. Suppose that $a\neq b$. Then $\{a\}=\{c\}$ and $\{a,b\}=\{c,d\}$. Thus $a=c$ and $b=d$. $b$ cannot be $c$ here since $a=b=c$ is a contradiction. \\
+
+Now suppose that $a=c$ and $b=d$, then $\{a\}=\{c\}$ and $\{a,b\}=\{c,d\}$ thus $\{\{a\},\{a,b\}\}=\{\{c\},\{c,d\}\}$. 
+\end{proof}
+\end{prp}
+
+\subsection{Unions and Intersections}
+\begin{axm}{The Axiom of Union}{}\\
+For any set $A$, there exists a set $B$ such that for any set $x$, $x\in B$ if and only if there exists a set $y\in A$ such that $x\in y$. In first order logic symbols, we have $$\forall A\exists B\forall x(x\in B\leftrightarrow\exists y(x\in y\wedge y\in A))$$
+\end{axm}
+
+One must wonder: why go the long away round and say that a unions are elements of a set living in a set of sets? Essentially this allows us to proceed with the The Axiom of Pairing. The Axiom of pairing allows new sets to be created from old sets. And in fact, the The Axiom of Unions is simply recovering the elements hidden from the sets given by the axiom of pairing. 
+
+\begin{defn}{Union of Sets}{} Let $\mF$ be a set. Define the union of sets in $\mF$ to be $$\bigcup_{A\in\mF}A=\{x\in B\;|\;\exists y(x\in y\vee y\in B)\}$$ where $B$ is the set defined by the axiom of union applied to $\mF$. 
 \end{defn}
 
 At this point the reader should not be confused between operations and statements. I assume the readers are crystal clear about it but I would elaborate on it as a reminder. Unions and the upcoming intersections are operations on sets that produce new sets. They are by no means able to be evaluated to be true or false. This property is preserved exclusively for statements and statements alone. And statements are given by symbols such as $=$ and $\subseteq$. If you think about it, one should be able to judge whether $A\subseteq B$ is true or false, depending on the contents of $A$ and $B$ while it does not make sense to judge the validity of $A\cup B$. 
 
-\begin{prp}{}{} Let $A,B,C$ be sets. 
+\begin{lmm}{}{}\\
+Let $A,B,C$ be sets. Then the following are true. 
 \begin{itemize}
 \item Identity: $A\cup\emptyset=A$
 \item Commutativity: $A\cup B=B\cup A$
@@ -144,17 +242,22 @@ At this point the reader should not be confused between operations and statement
 \item Suppose that $A\subset B$. $x\in A\cup B\implies x\in A$ or $x\in B\implies x\in B$ or $x\in B\implies x\in B$. Thus $A\cup B\subset B$. $x\in B\implies x\in B$ or $x\in B\implies x\in A$ or $x\in B\implies x\in A\cup B$. Thus $B\subset A\cup B$. Now suppose that $A\cup B=B$. $x\in A\implies x\in B$ thus $A\subset B$. 
 \end{itemize}
 \end{proof}
-\end{prp}
+\end{lmm}
 
 There is a bunch of fancy names in front of the properties of the operations. They are simply jargons for the properties of any operations in general. Do not be frightened by it since I will mostly like not recall properties from their fancy names unless I want to shortent the length of a proof. \linebreak\linebreak
 We are shown an operation which is some what equivalent to the "or" operation in logic theory. We shall present a similar notion for "and" as well. 
 
-\begin{defn}{Intersection}{} Let $A,B$ be sets. Define the intersection of $A$ and $B$ to be $$A\cap B=\{x\;|\;x\in A\text{ and }x\in B\}$$
+\begin{prp}{}{}\\
+Let $\mF$ be a set. There exists a unique set $S$ such that for any variable $x$, $x\in S$ if and only if $x\in A$ for all $A\in\mF$. 
+\end{prp}
+
+\begin{defn}{Intersection of Sets}{}\\
+Let $\mF$ be a set. Define the intersection of sets of $\mF$ to be the unique set $$\bigcap_{A\in\mF}A$$ such that $x\in\bigcap_{A\in\mF}A$ if and only if $x\in A$ for all $A\in\mF$. 
 \end{defn}
 
 The intersection is a another way to produce new sets from old, except that smaller sets are created, instead of larger sets. However this does not mean that the number of sets it procures is limited. 
 
-\begin{prp}{}{} Let $A,B,C$ be sets. 
+\begin{lmm}{}{} Let $A,B,C$ be sets. 
 \begin{itemize}
 \item Identity: $A\cap\emptyset=\emptyset$
 \item Commutativity: $A\cap B=B\cap A$
@@ -164,100 +267,65 @@ The intersection is a another way to produce new sets from old, except that smal
 \end{itemize}
 \begin{proof} The first four are proved in similarity to the counterpart with unions. We prove the last item. Suppose that $A\subset B$. $x\in A\cap B\implies x\in A$ and $x\in B$. Thus $x\in A$ and $A\cap B\subset A$. $x\in A\implies x\in A$ and $x\in A\implies x\in A$ and $x\in B$. Thus $x\in A\cap B$ and $A\subset A\cap B$. Now suppose that $A\cap B=A$. $x\in A\implies x\in A\cap B\implies x\in B$. Thus $A\subset B$. 
 \end{proof}
-\end{prp}
+\end{lmm}
 
 Finally we have the distributive law that links the two operators between sets. 
 
-\begin{thm}{Distributive Law}{} Let $A,B,C$ be sets. 
+\begin{prp}{Distributive Law}{} Let $A,B,C$ be sets. 
 \begin{itemize}
 \item $A\cap(B\cup C)=(A\cap B)\cup(A\cap C)$
 \item $A\cup(B\cap C)=(A\cup B)\cap(A\cup C)$
 \end{itemize}
 \begin{proof} The two are proved by supposing $x$ in the left and the right and proving that the left and the right are subsets of each other by logic. 
 \end{proof}
-\end{thm}
-
-\subsection{Axiom of Regularity}
-The axiom of regularity, similar to the axiom schema of specification in the next chapter is meant to prevent paradoxes rather than construct new sets. 
-
-\begin{defn}{Disjoint}{} Let $A,B$ be sets. $A$ and $B$ are disjoint if and only if $A\cap B=\emptyset$. 
-\end{defn}
-
-\begin{axm}{Axiom of Regularity}{} Every non-empty set $X$ contains an element $y\in X$ such that $X$ and $y$ are disjoint sets. 
-\end{axm}
-
-With this axiom, expressions such as $S\in S$ does not make sense anymore. Which is good, because it prevents self referencing as a potential paradox. 
-
-\subsection{Complements}
-Another important concept in set theory is complements of sets. However one shall see that there are exactly two notions of complements. One that involves complements from the universe and another complement from a relative set. 
-
-\begin{defn}{Relative Complements}{} Let $A,B$ be sets. Define $$A\setminus B=\{x\in A:x\notin B\}$$ to be the relative complement of $B$ in $A$. 
-\end{defn}
-
-This complement depends on what the larger set is, therefore suggesting the name relative. 
-
-\begin{defn}{Absolute Complements}{} Let $E$ be the set that contains all elements under study. Define the absolute complement of $A$ in $E$ to be $$A^C=E\setminus A$$
-\end{defn}
-
-From Russell's Paradox we already know that sets too large and vague is unacceptable, so we usually define what the universal set is. For example, if the universal set is natural numbers, them the absolute coplements of the even numbers is the odd numbers including zero (We have not formally talked about number systems, which we will in formal set theory courses). If the universal set is the real numbers then clearly the absolute complement is not only the odd numbers. \\
-
-Notice that the concepts of relative complement and absolute complement coincide when $B\subseteq A$ in the definition of relative complements. The reason for two different notations is because relative complements does not necessarily require that $B\subseteq A$. It simply rules out elements of $B$ the coincide with $A$, while in the case of absolute complements, the universal set is always a superset of $A$. \\
-
-If we assume that there is a universal set that is a superset of both $A$ and $B$, then we have the relation $$B\cap A^C=B\setminus A$$ This can be proven once again using first order logic:
-
-\begin{prp}{}{} Let $A,B$ be sets. Then $$A\setminus B=A\cap B^C$$
-\begin{proof} Let $x\in A\setminus B$. Then $x\in A$ and $x\notin B$. But $x\notin B$ implies $x\in B^C$. Thus $x\in A$ and $x\in B^C$ implies $x\in A\cap B^C$. This proves that $A\setminus B\subseteq A\cap B^C$. \\
-The entire argument is reversible where implications are double sided. Thus also we have $A\cap B^C\subseteq A\setminus B$ and thus $A\setminus B=A\cap B^C$. 
-\end{proof}
 \end{prp}
 
-\begin{prp}{}{} Let $A,B$ be sets and subsets of $E$. The following four with respect to the absolute complement. 
+\begin{defn}{Disjoint Sets}{}\\
+Let $A,B$ be sets. We say that $A$ and $B$ are disjoint if and only if $A\cap B=\emptyset$. 
+\end{defn}
+
+\subsection{Set Complements}
+Another important concept in set theory is complements of sets. However one shall see that there are exactly two notions of complements. One that involves complements from the universe and another complement from a relative set. 
+
+\begin{defn}{Set Complements}{} Let $A,B$ be sets. Define $$A\setminus B=\{x\in A\;|\;x\notin B\}$$ to be the relative complement of $B$ in $A$. 
+\end{defn}
+
+\begin{lmm}{}{} Let $E$ be a set. Let $A,B\subseteq E$ be subsets. Then the following are true. 
 \begin{itemize}
-\item $(A^C)^C=A$
-\item $\emptyset^C=E$ and $E^C=\emptyset$
-\item $A\cap A^C=\emptyset$ and $A\cup A^C=E$
-\item $A\subset B\iff B^C\subset A^C$
+\item $(E\setminus A)\setminus A=A$. 
+\item $E\setminus\emptyset=E$. 
+\item $E\setminus E=\emptyset$. 
+\item $A\cap E\setminus A=\emptyset$. 
+\item $A\cup E\setminus A=E$. 
+\item $A\subseteq B$ if and only if $E\setminus B\subseteq E\setminus A$. 
 \end{itemize}
 \begin{proof} The four are proved by expanding on the definition of complement and proved by logic. 
 \end{proof}
-\end{prp}
+\end{lmm}
 
 Similar to the distributive law, we can associate the complement operator with the previous two operators, namely union and intersection. 
 
-\begin{thm}{De Morgans Laws}{} Let $A,B$ be sets, 
+\begin{prp}{De Morgans Laws}{}\\
+Let $E$ be a set. Let $A,B\subseteq E$ be subsets. Then the following are true. 
 \begin{itemize}
-\item $(A\cup B)^C=A^C\cap B^C$
-\item $(A\cap B)^C=A^C\cup B^C$
+\item $E\setminus(A\cup B)=E\setminus A\cap E\setminus B$. 
+\item $E\setminus(A\cap B)=E\setminus A\cup E\setminus B$. 
 \end{itemize}
-\begin{proof} Both are proved by expansion of the set language into logic. 
-\end{proof}
-\end{thm}
-
-The following are a list of operations that are true with respect to the relative complements. 
-
-\begin{prp}{}{} Let $A,B,C$ be sets. 
-\begin{itemize}
-\item $A\subset B$ if and only if $A\setminus B=\emptyset$
-\item $A\setminus(A\setminus B)=A\cap B$
-\item $A\cap (B\setminus C)=(A\cap B)\setminus(A\cap C)$
-\item $A\cap B\subset(A\cap C)\cup(B\cap C^C)$
-\item $(A\cup C)\cap(B\cup C^C)\subset A\cup B$
-\end{itemize}
-\begin{proof} Exercise. 
-\end{proof}
 \end{prp}
 
-These obscure expressions are often explained clearly by drawing venn diagrams, which we will not discuss here because I do not know how to draw. \\
+\begin{lmm}{}{} Let $E$ be a set. Let $A,B\subseteq E$ be subsets. Then the following are true. 
+\begin{itemize}
+\item $A\subseteq B$ if and only if $A\setminus B=\emptyset$. 
+\item $A\setminus(A\setminus B)=A\cap B$. 
+\end{itemize}
+\begin{proof} The four are proved by expanding on the definition of complement and proved by logic. 
+\end{proof}
+\end{lmm}
 
-Finally, the rarely used symmetric difference will be defined here although there is no real usage for now. 
-
-\begin{defn}{Symmetric Difference}{} Let $A,B$ be sets. Define the symmetric difference of $A$ and $B$ to be $$A+B=(A\setminus B)\cup(B\setminus A)$$
-\end{defn}
-
-\subsection{Axiom of Powers}
+\subsection{The Axiom of Powers}
 Finally, the axiom of power is simple: to assert the existence of power sets of a set. 
 
-\begin{axm}{Axiom of Power Set}{} For each set there exists a collection of sets that contains among its elements all the subsets of the given set. Define that collection to be $\mathcal{P}(A)$, where $A$ is any set. 
+\begin{axm}{The Axiom of Power Set}{} For each set there exists a collection of sets that contains among its elements all the subsets of the given set. Define that collection to be $\mathcal{P}(A)$, where $A$ is any set. 
 \end{axm}
 
 The following is a proposition regarding integrating the operation of taking power sets and unions and intersections. It serves as a good exercise. 
@@ -268,26 +336,12 @@ The following is a proposition regarding integrating the operation of taking pow
 \item $\bigcup_{X\in E}\mathcal{P}(X)\subseteq\mathcal{P}(\bigcup_{X\in E}X)$
 \end{itemize}
 \begin{proof}
-Let $A\in\bigcap_{X\in E}\mathcal{P}(X)$. Then $A\subseteq X$ for all $X\in E$. Thus $A\subseteq\bigcap_{X\in E}X$ and $A\in\mathcal{P}(\bigcap_{X\in E}X)$. For the reverse inclusion, the above implications are all double sided thus we are done. \linebreak\linebreak
+Let $A\in\bigcap_{X\in E}\mathcal{P}(X)$. Then $A\subseteq X$ for all $X\in E$. Thus $A\subseteq\bigcap_{X\in E}X$ and $A\in\mathcal{P}(\bigcap_{X\in E}X)$. For the reverse inclusion, the above implications are all double sided thus we are done. \\
 Let $A\in\bigcup_{X\in E}\mathcal{P}(X)$. Then $A\subseteq\mathcal{P}(X)$ for some $X\in E$. Thus $A\subseteq\bigcup_{X\in E}X$ and $A\in\bigcup_{X\in E}\mathcal{P}(X)$ and we are done. Note that the reverse inclusion does not hold since we only have $A\subseteq\mathcal{P}(X)$ for some $X\in E$ as compared to the intersection of power sets. 
 \end{proof}
 \end{prp}
 
 \subsection{Cartesian Products}
-\begin{defn}{Ordered Pairs}{} Define the ordered pair of $a$ and $b$ to be $$(a,b)=\{\{a\},\{a,b\}\}$$
-\end{defn}
-
-Note the cleverness here, the ordered pair is defined as a set of two elements, one of which is a singleton which defines which element in the ordere pair comes first. This allows order to be defined in a set which are a collection of unordered elements. Can you think of a way to extend this notion into triple, quadruples and even $n$-tuples?\\
-
-Let us see an immediate consequence of this definition which proves that this notion indeed works out nicely. 
-
-\begin{prp}{}{} Let $(a,b)$ and $(c,d)$ be ordered pairs. Then $(a,b)=(c,d)$ if and only if $a=c$ and $b=d$. 
-\begin{proof} Suppose that $(a,b)=(c,d)$. Then we have by definition, $$\{\{a\},\{a,b\}\}=\{\{c\},\{c,d\}\}$$ There are two cases: $a=b$ and $a\neq b$. Suppose that $a=b$, then $\{\{a\}\}=\{\{c\},\{c,d\}\}$. This forces $\{a\}=\{c\}=\{c,d\}$ and $a=c=d$. Suppose that $a\neq b$. Then $\{a\}=\{c\}$ and $\{a,b\}=\{c,d\}$. Thus $a=c$ and $b=d$. $b$ cannot be $c$ here since $a=b=c$ is a contradiction. \\
-
-Now suppose that $a=c$ and $b=d$, then $\{a\}=\{c\}$ and $\{a,b\}=\{c,d\}$ thus $\{\{a\},\{a,b\}\}=\{\{c\},\{c,d\}\}$. 
-\end{proof}
-\end{prp}
-
 We now define the cartesian product of two sets, whose elements are ordered pairs. 
 
 \begin{defn}{Cartesian Product}{} Let $A,B$ be sets. Define the Cartesian Product of $A$ and $B$ to be $$A\times B=\{(a,b)\;|\;a\in A, b\in B\}$$
@@ -316,6 +370,9 @@ We end the section with properties of the cartesian product when used in conjunc
 \begin{proof} Again just a practise of expansion into logic. 
 \end{proof}
 \end{prp}
+
+\begin{axm}{The Axiom of Choice}{}\\
+\end{axm}
 
 \pagebreak
 \section{Relations on a Set}
@@ -531,7 +588,7 @@ Interested readers may look up left and right inverses of a function. They are c
 \pagebreak
 
 \section{Number Systems}
-\subsection{Axiom of Infinity}
+\subsection{The Axiom of Infinity}
 Before we formulate the natural numbers via set theoretic language, we need one more axiom to guarantee the existence of the set of natural numbers. 
 \begin{defn}{Successor}{} Define the successor of a set $x$ to be $$x^+=x\cup\{x\}$$
 \end{defn}
@@ -540,13 +597,13 @@ Notice that the successor of a set is also a set. With this notion we can define
 
 Finally, we need to guarantee that such a set exists. 
 
-\begin{axm}{Axiom of Infinity}{} There exists a set containing the empty set $\emptyset$ and containing the successor of each of its elements. 
+\begin{axm}{The Axiom of Infinity}{} There exists a set containing the empty set $\emptyset$ and containing the successor of each of its elements. 
 \end{axm}
 
 As with all the other axioms, to argue that an axiom is necessary and unprovable by other axioms is a very advanced topic. For now we will only state that it is needed. 
 
-\subsection{The Peano Axioms}
-\begin{defn}{The Peano Axioms}{} We say that $\omega$ is a successor set if
+\subsection{The Peano The Axioms}
+\begin{defn}{The Peano The Axioms}{} We say that $\omega$ is a successor set if
 \begin{enumerate}
 \item $\emptyset\in\omega$
 \item $n\in\omega\implies n^+\in\omega$
@@ -569,8 +626,8 @@ The following theorem allows functions that work recursively to be defined.
 \item $u(0)=a$
 \item $u(n^+)=f(u(n))$ for all $n\in\omega$
 \end{itemize}
-\begin{proof} Let $$E=\{A\subset\omega\times X\;|\;(0,a)\in A\text{ and }(n,x)\in A\implies (n^+,f(x))\in A\}$$ Since $\omega\times X\in E$, $E\neq\emptyset$. Define $u=\bigcap_{B\in E}B$. Then $u\in E$. We want to show that $u$ is a function. We prove that the set of all $n$ such that $(n,x)\in u$ and $(n,y)\in u\implies x=y$ is $\omega$ Let $$S=\{n\in\omega\;|\;(n,x)\in u,(n,y)\in u\implies x=y\}$$ We prove it by the fifth item of Peano Axiom. \linebreak\linebreak
-We first show that $0\in S$. Suppose for a contradiction that $0\notin S$ and $(0,b)\in u$ and $a\neq b$. Consider $v=u-\{(0,b)\}$. $(0,a)\in v$ and $(n,x)\in A\implies (n^+,f(x))\in A$ since $n^+\neq 0$ for all $n\in\omega$. Thus $v\in E$ contradicts the fact that $u=\bigcap_{B\in E}B$. \linebreak\linebreak
+\begin{proof} Let $$E=\{A\subset\omega\times X\;|\;(0,a)\in A\text{ and }(n,x)\in A\implies (n^+,f(x))\in A\}$$ Since $\omega\times X\in E$, $E\neq\emptyset$. Define $u=\bigcap_{B\in E}B$. Then $u\in E$. We want to show that $u$ is a function. We prove that the set of all $n$ such that $(n,x)\in u$ and $(n,y)\in u\implies x=y$ is $\omega$ Let $$S=\{n\in\omega\;|\;(n,x)\in u,(n,y)\in u\implies x=y\}$$ We prove it by the fifth item of Peano The Axiom. \\
+We first show that $0\in S$. Suppose for a contradiction that $0\notin S$ and $(0,b)\in u$ and $a\neq b$. Consider $v=u-\{(0,b)\}$. $(0,a)\in v$ and $(n,x)\in A\implies (n^+,f(x))\in A$ since $n^+\neq 0$ for all $n\in\omega$. Thus $v\in E$ contradicts the fact that $u=\bigcap_{B\in E}B$. \\
 We now show that $n^+\in S$ if $n\in S$. Let $n\in S$. Then there exists a unique $x\in X$ such that $(n,x)\in u$. Suppose that $n^+\notin S$. Then there exists $y\neq f(x)$ such that $(n,y)\in u$. Consider $v=u-\{(n,y)\}$. $(0,a)\in v$ and $(n,x)\in v\implies (n^+,f(x))\in v$. Thus $v\in E$ contradicts the fact that $u=\bigcap_{B\in E}B$. We thus have $S=\omega$, finishing the proof. 
 \end{proof}
 \end{thm}
@@ -766,13 +823,10 @@ As we will see later, even comparisons have different types, namely total orders
 It is worth noting here that $<$ is neither reflexive nor symmetric which the readers can check. 
 
 \pagebreak
-\section{Equivalent Formations of Zorn's Lemma}
-\subsection{Axiom of Choice and Zorn's Lemma}
+\section{Equivalent Formations of The Axiom of Choice}
+\subsection{Zorn's Lemma}
 \begin{defn}{Families}{} A family is a function $f:I\to X$ where $I$ is an index set, usually $\omega$ or a natural number, such that every element of the range of $f$ is of the form $x_i$, $i\in\omega$. 
 \end{defn}
-
-\begin{axm}{Axiom of Choice}{} The Cartesian Product of a non-empty family of non-empty sets is non-empty. 
-\end{axm}
 
 \begin{thm}{}{} If a set is infinite, then it has a subset equivalent to $\omega$. 
 \end{thm}
@@ -780,7 +834,7 @@ It is worth noting here that $<$ is neither reflexive nor symmetric which the re
 \begin{thm}{Zorn's Lemma}{} If $X$ is a partially ordered set such that every chain in $X$ has an upper bound, then $X$ contains a maximal element. 
 \end{thm}
 
-\subsection{Well Ordering}
+\subsection{The Well Ordering Principle}
 \begin{defn}{Well Ordered Set}{} A partially ordered set is well ordered if every non-empty subset of it has a smallest element. 
 \end{defn}
 
