--- a/Geometry and Topology/Algebraic Geometry 2/Algebraic Geometry 2.tex
+++ b/Geometry and Topology/Algebraic Geometry 2/Algebraic Geometry 2.tex
@@ -169,7 +169,7 @@ Let $k$ be a field. Let $V$ be a variety over $k$. We say that $V$ is smooth if 
 \end{itemize}
 \end{lmm}
 
-\begin{prp}{}{} Let $k$ be an algebraically closed field. Let $V\subseteq\A_k^n$ be an irreducible affine variety. Then there is an isomorphism $$K(V)\cong\text{Frac}(k[V])$$ Moreover, $K(V)$ is a finitely generated field extension of $\C$. 
+\begin{prp}{}{} Let $k$ be an algebraically closed field. Let $V\subseteq\A_k^n$ be an irreducible affine variety. Then there is an isomorphism $$K(V)\cong\text{Frac}(k[V])$$ Moreover, $K(V)$ is a finitely generated field extension of $k$. 
 \end{prp}
 
 \begin{prp}{}{} Let $k$ be an algebraically closed field. Let $V\subseteq\A_k^n$ be an irreducible affine variety. Then we have $$\text{trdeg}_k(K(V))=\dim(V)$$
@@ -178,6 +178,27 @@ Let $k$ be a field. Let $V$ be a variety over $k$. We say that $V$ is smooth if 
 \begin{prp}{}{} Let $k$ be an algebraically closed field. Let $V\subseteq\Prj^n$ be an irreducible projective variety over $k$. Then there is a $k$-algebra isomorphism $$K(X)\cong(k[V]_{(0)})_0$$ where the zero refers to taking the degree zero part of the graded ring. 
 \begin{proof}
 \end{proof}
+\end{prp}
+
+\begin{prp}{}{}\\
+Let $k$ be an algebraically closed field. Let $X$ be an irreducible variety over $k$. Then the following are true. 
+\begin{itemize}
+\item For any open subset $U\subseteq X$, we have $k(X)=k(U)$. 
+\item $k(X)$ is a finitely generated field extension. 
+\end{itemize}
+\begin{proof}
+If $[(V,f)]\in k(X)$, then $[(U\cap V,f|_{U\cap V})]$ by definition. But the latter is also an element of $k(U)$ so $k(X)\subseteq k(U)$. Conversely, if $(V,g)\in k(U)$, then $V$ is also an open subset of $X$, hence $(V,g)$ is an element of $k(X)$ and so $k(U)\subseteq k(X)$. \\
+
+Let $U$ be an open affine subset of $X$. Then $k(X)=k(U)$. Then by prp2.1.4 we know that $k(U)$ is a finitely generated field extension over $k$. 
+\end{proof}
+\end{prp}
+
+\begin{eg}{}{}\\
+Let $k$ be an algebraically closed field. Let $n\in\N$. Then we have $$k(\Prj^n)\cong k(x_1,\dots,x_n)$$
+\end{eg}
+
+\begin{prp}{}{}\\
+Let $k$ be a field. Let $K/k$ be a finitely generated field extension. Then there exists an irreducible variety $X$ over $k$ such that $K(X)=K$. 
 \end{prp}
 
 \subsection{Rational Maps between Varieties}
@@ -222,8 +243,6 @@ It only makes sense to compose rational maps if the former one is dominant.
 \begin{prp}{}{} Let $k$ be a field. Let $X,Y$ be irreducible varieties over $k$. Then there is a one-to-one correspondence $$\left\{\substack{\text{Dominant Rational Maps}\\X\to Y}\right\}\;\;\overset{1:1}{\longleftrightarrow}\left\{\substack{k\text{-algebra homomorphisms}\\K(Y)\to K(X)}\right\}$$ given by $\phi\mapsto\phi^\ast$. 
 \end{prp}
 
-TBA: Equivalence of categories between irreducible varieties and dominant rational maps, and field extensions of $k$ and $k$-algebra homomorphisms. 
-
 \subsection{Birational Equivalence}
 \begin{defn}{Birational Maps}{} Let $X,Y$ be irreducible varieties. Let $f:X\to Y$ be a dominant rational map defined on $U\subseteq X$. We say that $f$ is a birational map if there exists a dominant rational map $g:Y\to X$ such that $$g\circ f=\text{id}_U\;\;\;\;\text{ and }\;\;\;\;f\circ g=\text{id}_V$$ for some open subsets $U\subseteq X$ and $V\subseteq Y$. In this case, we say that $X$ and $Y$ are birational. 
 \end{defn}
@@ -267,12 +286,66 @@ The zeroth graded component of $k(x_0,\dots,x_n)$ is given by $$(k(x_0,\dots,x_n
 \end{defn}
 
 \pagebreak
-\section{Differential Forms on Varieties}
-\subsection{Differential Forms as the Module of Kahler Differentials}
-\begin{defn}{Differential Forms on Varieties}{} Let $k$ be a field. Let $X$ be a variety over $k$. Define the module of Kahler differentials of $X$ to be the module $$\Omega_X^1=\Omega_{k[X]/k}^1$$
+\section{The Categorical Viewpoint}
+\subsection{The Category of Varieties with Regular Maps}
+Recall that coordinate rings are finitely generated algebras over $k$ the ground field. 
+
+\begin{defn}{The Category of Affine Varieties}{} Define the category of affine varieties $\text{AffVar}_k$ over a field $k$ as follows. 
+\begin{itemize}
+\item The objects are the affine varieties $\V(F)$ for some set of polynomials $F$ over $k$. 
+\item The morphisms are the morphisms of affine varieties. This means that $\phi:V\to W$ is such that $\phi(p)=(f_1(p),\dots,f_m(p))$ for some $f_1,\dots,f_m\in k[V]$. 
+\end{itemize}
 \end{defn}
 
-\begin{defn}{Differential $n$-Forms on Varieties}{} Let $k$ be a field. Let $X$ be a variety over $k$. Define the module of differential $n$-forms of $X$ to be the module $$\Omega_X^n=\bigwedge_{i=1}^n\Omega_{k[X]/k}^1$$
+\begin{prp}{}{} Let $k$ be a field. Then there is an equivalence of categories $$(\text{AffVar}_k)^\text{op}\cong(\text{Reduced Finitely Generated }k\text{-algebras})$$
+given as follows. 
+\begin{itemize}
+\item For every affine algebraic set $V$, there corresponds a reduced finitely generated $k$-algebra which is the coordinate ring $$k[V]=\frac{k[x_1,\dots,x_n]}{I(V)}$$
+\item For every regular map $\phi:V\to W$, there is a corresponding homomorphism of $k$-algebras $\phi^\ast:k[W]\to k[V]$ defined by $f\mapsto f\circ\phi$. 
+\end{itemize}
+\end{prp}
+
+\begin{defn}{The Category of Affine Algebraic Varieties}{} Define the category of affine algebraic varieties $\text{AffAlgVar}_k$ over a field $k$ to be the full subcategory of $\text{AffVar}_k$ consisting of irreducible affine varieties. 
+\end{defn}
+
+\begin{prp}{}{} Let $k$ be a field the above equivalence of categories restricts to an equivalence of categories $$(\text{AffAlgVar}_k)^\text{op}\cong(\text{Integral Finitely Generated }k\text{-algebras})$$
+\end{prp}
+
+\begin{defn}{Category of Varieties}{} Let $k$ be a field. Define the category of varieties $\bold{Var}_k$ as follows. 
+\begin{itemize}
+\item The objects are the quasi-projective varieties over $k$. 
+\item The morphisms are the morphism ofquasi-projective varieties. 
+\end{itemize}
+\end{defn}
+
+\begin{lmm}{}{} Let $k$ be a field. Let $V,W$ be varieties over $k$. Then the following are true. 
+\begin{itemize}
+\item If $V$ and $W$ are affine, then $V\times W$ is the categorical product in $\bold{Var}_k$. 
+\item If $V$ and $W$ are projective, then $V\times W$ is the categorical product in $\bold{Var}_k$. 
+\end{itemize}
+\end{lmm}
+
+The goal is now to remove the non-nilpotent condition. For example, we would like to distinguish between the variety $V(x=0)$ and the variety $V(x^2=0)$. 
+
+\subsection{The Category of Varieties with Dominant Rational Maps}
+\begin{defn}{Category of Varieties}{} Let $k$ be a field. Define the category of irreducible varieties $\bold{BIrrVar}_k$ as follows. 
+\begin{itemize}
+\item The objects are the irreducible quasi-projective varieties over $k$. 
+\item The morphisms are the dominant rational maps. 
+\end{itemize}
+\end{defn}
+
+\begin{prp}{}{}\\
+Let $k$ be an algebraically closed field. Then there is an equivalence of categories $$(\text{AffAlgVar}_k)^\text{op}\cong(\substack{\text{Finitely generated}\\\text{field extensions over }k})$$ given by sending a variety to its function field. The morphisms in the latter category are $k$-algebra homomorphisms. 
+\end{prp}
+
+\pagebreak
+\section{Differential Forms on Varieties}
+\subsection{Differential Forms as the Module of Kahler Differentials}
+\begin{defn}{Regular Differential Forms on Varieties}{} Let $k$ be a field. Let $X$ be a variety over $k$. Define the module of Kahler differentials of $X$ to be the module $$\Omega_X^1=\Omega_{\mO_X(X)/k}^1$$ Elements of $\Omega_X^1$ are called regular differential forms on $X$. 
+\end{defn}
+
+\begin{defn}{Differential $n$-Forms on Varieties}{} Let $k$ be a field. Let $X$ be a variety over $k$. Define the module of differential $n$-forms of $X$ to be the module $$\Omega_X^n=\bigwedge_{i=1}^n\Omega_X^1$$
 \end{defn}
 
 \subsection{The Geometric Genus}
@@ -298,10 +371,37 @@ The zeroth graded component of $k(x_0,\dots,x_n)$ is given by $$(k(x_0,\dots,x_n
 \begin{defn}{Finite Morphisms}{} Let $k$ be a field. Let $X,Y$ be varieties over $k$. Let $f:X\to Y$ be a morphism of varieties. We say that $f$ is finite if there exists an affine cover $W_1,\dots,W_k$ of $Y$ such that $f^{-1}(W_i)$ is affine and that via the map $$f|_{f^{-1}(W_i)}:f^{-1}(W_i)\to W_i$$ we have that $k[f^{-1}(W)]$ is a finitely generated $k[W]$-module . 
 \end{defn}
 
-\begin{prp}{}{} Let $k$ be a field. Let $X,Y$ be varieties over $k$. Let $f:X\to Y$ be a morphism of varieties. If $f$ is finite and dominant, then the induced map $$K(Y)\to K(X)$$ is a finite field extension. 
+\begin{eg}{}{}\\
+Let $k$ be an algebraically closed field. The map $\varphi:\V(y^2-x(x^2-1))\subseteq\A_k^2\to\A_k^1$ defined by $(x,y)\mapsto x$ is a finite morphism. 
+\begin{proof}\\
+The induced $k$-algebra homomorphism is the map $k[x]\to\frac{k[x,y]}{(y^2-x(x^2-1))}$ given by $x\mapsto x$. Then $\frac{k[x,y]}{(y^2-x(x^2-1)}$ is a finitely generated $k[x]$-module because it is generated by $1$ and $y$. 
+\end{proof}
+\end{eg}
+
+\begin{prp}{}{}\\
+Let $k$ be a field. Let $X,Y$ be varieties over $k$. Let $f:X\to Y$ be a morphism of varieties. Then $f$ is finite if and only if $f$ is proper and $\abs{\phi^{-1}(q)}<\infty$ is finite for all $q\in Y$. 
+\begin{proof}\\
+Suppose first that $f$ is finite. Without loss of generality suppose that $X$ and $Y$ are affine, otherwise work with affine charts. By definition, $k[X]$ is a finitely generated $k[Y]$-module. Hence $\frac{k[X]}{\phi^\ast(m_q)}$ is also a finitely generated $\frac{k[Y]}{m_q}\cong k$-module. Notice that we have $\phi^\ast(m_q)\subseteq\I(\phi^{-1}(q))$ because $\V(\phi^\ast(m_q))\subseteq\V(\I(\phi^{-1}(q)))$. Hence the quotient map $k[X]\to k[\phi^{-1}(q)]$ induces a surjective homomorphism $\frac{k[X]}{\phi^\ast(m_q)}\to k[\phi^{-1}(q)]$. Hence $k[\phi^{-1}(q)]$ is also a finitely dimensional $k$-algebra. But finite dimensional $k$-algebras must have finitely many maximal ideals (consider the surjection $R\to\prod\frac{R}{m}$ given by the Chinese remainder theorem). Thus $\phi^{-1}(q)$ is a finite set. 
+\end{proof}
 \end{prp}
 
-\begin{prp}{}{} Let $k$ be a field. Let $X,Y$ be varieties over $k$. Let $f:X\to Y$ be a morphism of varieties. Then $f$ is finite if and only if $f$ is proper and $\abs{\phi^{-1}(q)}<\infty$ is finite for all $q\in Y$. 
+\begin{eg}{}{}\\
+Let $k$ be an algebraically closed field. Define the map $f:\V(xy-1)\subseteq\A_k^2\to\A_k^1$ by $(x,y)\mapsto x$. Then the following are true. 
+\begin{itemize}
+\item For all $q\in\A_k^1$, $f^{-1}(q)$ is finite. 
+\item $f$ is not a finite morphism. 
+\end{itemize}
+\begin{proof}
+Let $q\in\A_k^1$. Then $f^{-1}(q)=\{(q,y)\;|\;qy=1\}=\{(q,1/q)\}$ so that $f$ has finite fibers. \\
+$f$ is not a finite morphism because the induced map of $k$-algebras is the inclusion map $k[x]\to k\left[x,\frac{1}{x}\right]$ and we have seen that the latter is not a finitely generated $k[x]$-module. 
+\end{proof}
+\end{eg}
+
+\begin{prp}{}{}\\
+Let $k$ be a field. Let $X,Y$ be irreducible varieties over $k$. Let $\phi:X\to Y$ be a morphism of varieties. If $f$ is finite and dominant, then the induced map $$k(Y)\to k(X)$$ is a finite field extension. 
+\begin{proof}
+Let $W\subseteq Y$ be an affine open subset such that $\phi^{-1}(W)\subseteq X$ is an affine open subset and $k[\phi^{-1}(W)]$ is finitely generated over $k[W]$. Let $a_1,\dots,a_r\in k[\phi^{-1}(W)]$ be generators as a $k[W]$-module. Let $S=k[W]\setminus\{0\}$. By definition, we have that $a_1,\dots,a_r$ span $S^{-1}k[\phi^{-1}(W)]$ as a $k(W)$ vector space. Since $X$ is irreducible and $\phi^{-1}(W)$ is an open subset of $X$, $\phi^{-1}(W)$ is also irreducible and $S^{-1}k[\phi^{-1}(W)]$ is an integral domain that is an algebra over the field $k(W)$. Hence $S^{-1}k[\phi^{-1}(W)]$ is a field. But the smallest field containing an integral domain must be its field of fractions. Hence $S^{-1}k[\phi^{-1}(W)]=k(\phi^{-1}(W))$. Finally, since $\phi^{-1}(W)$ is an open subset of $X$, $k(\phi^{-1}(W))=k(X)$ and so $k(X)$ is a finitely generated field extension over $k(W)=k(Y)$. 
+\end{proof}
 \end{prp}
 
 \begin{defn}{Degree of Finite Morphism}{} Let $k$ be a field. Let $X,Y$ be varieties over $k$. Let $f:X\to Y$ be a finite and dominant morphism of varieties. Define the the degree of $f$ to be $$\deg(f)=\dim_{K(Y)}K(X)$$
@@ -416,19 +516,37 @@ Let $Y$ be an irreducible closed subvariety of a variety $X$ of codimension $1$.
 
 A lot of varieties have the property that $\mO_{X,p}$ is a regular local ring. A large class of them comes from smooth varieties, but normal? varieties also has this property. 
 
+\begin{eg}{}{}\\
+Let $k$ be an algebraically closed field. Let $f=\frac{2x_0-2x_1}{x_0}\in k(\Prj^1)$. Then we have $$\text{div}(f)=[1:1]-[0:1]$$
+\begin{proof}\\
+We compute the contributions of each point on each chart. On $U_0\cong\A_k^1$, our function becomes $2-2x_1$. Let $p\in U_0$. Then $v_p(2-2x_1)\neq 0$ if and only if $2-2x_1\in m_p\mO_{U_0,p}$. This is true if and only if $2-2p=0$ and so $p=1$ is the only point in this chart giving a non-zero contribution. Since $m_1\mO_{U_0,1}$ is generated by $(x_1-1)$, we see that $v_1(2-2x_1)=v_1(-2(x_1-1))=1$. Thus $[1:1]$ has a coefficient of $1$ in $\text{div}(f)$. \\
+
+On $U_1\cong\A_k^1$, our function becomes $\frac{2x_0-2}{x_0}$. Let $p\in U_1$. Notice that $\text{val}_p\left(\frac{2x_0-2}{x_0}\right)=\text{val}_p(2x_0-2)-\text{val}_p(x_0)$, we can treat the numerator and denominator separately. Similar to the above, we have that $\text{val}_p(2x_0-2)\neq 0$ if and only if $p=1$. In this case, we have $\text{val}_1(2x_0-2)=\text{val}_1(2(x_0-1))=1$. But in this case our point in projective coordinates is given by $[1:1]$, and we have already computed its contribution on the chart $U_0$. Now $-\text{val}_p(x_0)\neq 0$ if and only if $p=0$. Since $m_0\mO_{U_1,0}$ is generated by $x$, we see that $-\text{val}_0(x_0)=-1$. Hence $[0:1]$ has a coefficient of $-1$ in $\text{div}(f)$. Hence $\text{div}(f)=[1:1]-[0:1]$. 
+\end{proof}
+\end{eg}
+
 \begin{lmm}{}{} Let $k$ be an algebraically closed field. Let $X$ be an irreducible variety over $k$ that is regular in codimension $1$. Let $f\in K(X)$. Then we have $\text{div}(f)\in\text{Div}(X)$ is a divisor of $X$. 
 \end{lmm}
 
 \begin{defn}{Principal Divisors}{} Let $k$ be an algebraically closed field. Let $X$ be an irreducible variety over $k$ that is regular in codimension $1$. Define the subgroup of principal divisors of $X$ to be $$\text{Prin}(X)=\{\text{div}(f)\;|\;f\in K(X)\}\leq\text{Div}(X)$$
 \end{defn}
 
-\begin{defn}{Divisor Class Group}{} Let $k$ be an algebraically closed field. Let $X$ be an irreducible variety over $k$ that is regular in codimension $1$. Define the divisor class group of $X$ to be $$\text{Pic}(X)=\frac{\text{Div}(X)}{\text{Prin}(X)}$$ We say that two divisors $D$ and $D'$ of $X$ are linearly equivalent if $[D]=[D']\in\text{Cl}(X)$. 
+\begin{defn}{Divisor Class Group}{} Let $k$ be an algebraically closed field. Let $X$ be an irreducible variety over $k$ that is regular in codimension $1$. Define the divisor class group of $X$ to be $$\text{Pic}(X)=\frac{\text{Div}(X)}{\text{Prin}(X)}$$ We say that two divisors $D$ and $D'$ of $X$ are linearly equivalent if $[D]=[D']\in\text{Pic}(X)$. In this case we write $D\sim D'$. 
 \end{defn}
 
-\begin{defn}{Degree of a Divisor}{} Let $X$ be an irreducible variety. Define the degree homomorphism $\deg:\text{Div}(X)\to\Z$ to be $$\deg\left(\sum_{i=1}^rk_iY_i\right)=\sum_{i=1}^rk_i$$ 
+\begin{defn}{Degree of a Divisor}{} Let $X$ be an irreducible variety. Define the degree homomorphism $\deg:\text{Div}(X)\to\Z$ to be $$\deg\left(\sum_{i=1}^rk_iY_i\right)=\sum_{i=1}^rk_i\deg(Y_i)$$ where $\deg(Y_i)$ is the degree of the hypersurface $Y_i$. 
 \end{defn}
 
-\begin{prp}{}{} Let $k$ be an algebraically closed field. Let $X$ be an irreducible variety over $k$ that is regular in codimension $1$. Then we have $$\ker(\deg)=\text{Prin}(D)$$ In particular, $D\in\text{Div}(X)$ is a principal divisor if and only if $\deg(D)=0$. 
+\begin{prp}{}{}\\
+Let $k$ be an algebraically closed field. The following are true regarding the projective space $\Prj_k^n$. 
+\begin{itemize}
+\item For any divisor $D\in\text{Div}(\Prj_k^n)$, we have $D\sim\deg(D)\V(x_0)$. 
+\item A divisor $D\in\text{Div}(\Prj_k^n)$ is principal if and only if $\deg(D)=0$. 
+\item There is an isomorphism $\text{Pic}(\Prj_k^n)\cong\Z$ given by $\deg:\text{Pic}(\Prj_k^n)\to\Z$. 
+\end{itemize}
+\begin{proof}\\
+Special case $n=1$: Suppose that $D=\sum_{i=1}^na_ip_i-\sum_{j=1}^mb_jq_j$ where $a_i,b_j\in\N$ and $p_i,q_j\in\Prj_k^1$. Let $$f(x)=\frac{(x-p_1)^{a_1}\cdots(x-p_n)^{a_n}}{(x-q_1)^{b_1}\cdots(x-q_m)^{b_m}}$$ This is a well defined rational function on $\Prj^1$ because $f$ is regular on the dense open set $\Prj_k^1\setminus\{q_1,\dots,q_m\}$. Moreover, it is clear that $\text{div}(f)=D$. 
+\end{proof}
 \end{prp}
 
 \pagebreak
